@wip fixxed broken style im a designer

--- a/src/style/custom/basic.less
+++ b/src/style/custom/basic.less
@@ -21,7 +21,7 @@
 }
 
 html{
-  overflow-y: hidden;
+  overflow-y: auto;
   font-feature-settings: "lnum" 1;
 }
 
